--- a/main.html
+++ b/main.html
@@ -9,6 +9,52 @@
 </head>
 <body>
     <!-- add table here -->
+<table>
+	<thead>
+		<th>NAME</th>
+		<th>KILLS</th>
+		<th>SAVED</th>
+		<th>DEATHS</th>
+		<th>REVIVES</th>
+		<th>WIN</th>
+	</thead>
+  <tbody>
+  <tr>
+    <td>Hackerman</td>
+    <td>12</td>
+    <td>0</td>
+    <td>15</td>
+    <td>10</td>
+    <td>0</td>
+  </tr>
+  <tr>
+    <td>Hackerman</td>
+    <td>12</td>
+    <td>0</td>
+    <td>15</td>
+    <td>10</td>
+    <td>0</td>
+  </tr>
+
+	  <tr>
+    <td>Hackerman</td>
+    <td>12</td>
+    <td>0</td>
+    <td>15</td>
+    <td>10</td>
+    <td>0</td>
+  </tr>
+	  <tr>
+    <td>Hackerman</td>
+    <td>12</td>
+    <td>0</td>
+    <td>15</td>
+    <td>10</td>
+    <td>0</td>
+  </tr>
+	  
+ </tbody>
+</table>
 
         
 </body>
